logs/mrsd_ros_tutorials/build.make.088.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::saveDataCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:9: error: ‘mrsd_ros_tutorials::SaveData::Response’ has no member named ‘point_cloud’
     res.point_cloud = kinect_color_pc;
         ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘void save_pcd(std::string, const pcl::PCLPointCloud2&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:31:31: error: no match for ‘operator*’ (operand type is ‘const pcl::PCLPointCloud2’)
   writer.writeBinary(pc_name, *input_pc);
                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘void segment_bin(const pcl::PCLPointCloud2&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:42:31: error: no matching function for call to ‘pcl::PassThrough<pcl::PointXYZ>::setInputCloud(const pcl::PCLPointCloud2&)’
   pass.setInputCloud (input_pc);
                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:42:31: note: candidate is:
In file included from /usr/include/pcl-1.7/pcl/common/io.h:45:0,
                 from /usr/include/pcl-1.7/pcl/io/io.h:43,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:11:
/usr/include/pcl-1.7/pcl/pcl_base.h:95:7: note: void pcl::PCLBase<PointT>::setInputCloud(const PointCloudConstPtr&) [with PointT = pcl::PointXYZ; pcl::PCLBase<PointT>::PointCloudConstPtr = boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZ> >]
       setInputCloud (const PointCloudConstPtr &cloud);
       ^
/usr/include/pcl-1.7/pcl/pcl_base.h:95:7: note:   no known conversion for argument 1 from ‘const pcl::PCLPointCloud2’ to ‘const PointCloudConstPtr& {aka const boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZ> >&}’
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:46:16: error: no match for ‘operator*’ (operand type is ‘const pcl::PCLPointCloud2’)
   pass.filter (*input_pc);
                ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:71:9: error: ‘kinect_color_pc’ was not declared in this scope
         kinect_color_pc = srv.response.point_cloud;
         ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:71:40: error: ‘mrsd_ros_tutorials::SaveData::Response’ has no member named ‘point_cloud’
         kinect_color_pc = srv.response.point_cloud;
                                        ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
